--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -16,9 +16,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "deps/favicon/favicon-16x16.png" %}">
     <link rel="manifest" href="{% static "deps/favicon/site.webmanifest" %}">
     {% if title %}
-        <title>Home - {{ title }}</title>
+        <title>Eugene's Home - {{ title }}</title>
     {% else %}
-        <title>Home - Page</title>
+        <title>Eugene's Home - Page</title>
     {% endif %}
 </head>
 
@@ -26,7 +26,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand" href="{% static "index.html" %}">Home</a>
+                <a class="navbar-brand" href="{% url "main:index" %}">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -40,9 +40,9 @@
                                 Информация
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="{% static "#" %}">Доставка и оплата</a></li>
-                                <li><a class="dropdown-item  text-white" href="{% static "#" %}">Контактная информация</a></li>
-                                <li><a class="dropdown-item  text-white" href="{% static "#" %}">Про нас</a></li>
+                                <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
+                                <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
+                                <li><a class="dropdown-item  text-white" href=" {% url "main:about" %} ">Про нас</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
