--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -18,7 +18,7 @@
 {% block footer %}
 <footer class="py-4 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Home Python Hub Studio 2023</p>
+        <p class="m-0 text-center text-white">Eugene's educational online store, taken from the channel Python Hub Studio 2024</p>
     </div>
 </footer>
 {% endblock  %}
