--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load goods_tags %}
 
+{% block css %}
+    <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">
+{% endblock  %}
+
 {% block content %}
 <!-- Контент на странице -->
 <div class="row">
@@ -45,10 +49,16 @@
         </form>
     </div>
 
-
+    {% if request.GET.q %}
+        <h3 class="mt-4">Результаты поиска по запросу {{ request.GET.q }}</h3>
+    {% if not goods %}
+        <h2 class="mt-4">По вашему запросу ничего не найдено</h2>    
+    {% endif %}
+    {% endif %}
+        
     {% for product in goods %}
-        <!-- Карта товара -->
-        <div class="col-lg-4 col-md-6 p-4">
+    <!-- Карта товара -->
+    <div class="col-lg-4 col-md-6 p-4">
             <div class="card border-primary rounded custom-shadow">
                 {% if product.image %}
                     <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
@@ -59,9 +69,25 @@
                 {% endif %}
                 <div class="card-body">
                     <a href="{% url "catalog:product" product.slug %}">
-                        <p class="card-title">{{ product.name }}</p>
+                        <p class="card-title">
+                            {% autoescape off %}
+                                {% if product.headline %}
+                                    {{ product.headline }}
+                                {% else %}
+                                    {{ product.name }}
+                                {% endif %}
+                            {% endautoescape %}
+                        </p>
                     </a>
-                    <p class="card-text text-truncate">{{ product.description }}</p>
+                    <p class="card-text text-truncate">
+                        {% autoescape off %}
+                            {% if product.bodyline %}
+                                {{ product.bodyline|truncatechars:100 }}
+                            {% else %}
+                                {{ product.description|truncatechars:35 }}
+                            {% endif %}
+                        {% endautoescape %}
+                    </p>
                     <p class="product_id">id: {{ product.show_correct_id }}</p>
                     <div class="d-flex justify-content-between">
                     {% if product.discount %}
@@ -85,6 +111,8 @@
 
 
 </div>
+
+{% if goods %}
 <!-- Пагинация -->
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center my-4">
@@ -109,6 +137,7 @@
         </div>
     </ul>
 </nav>
+{% endif %}
 {% endblock  %}
 
 
