--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,15 +14,15 @@
                         <label for="id_username" class="form-label">Имя пользователя</label>
                         <input type="text" class="form-control" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" name="username" id="id_username" placeholder="Введите ваше имя пользователя" required>
                     </div>
-
-                    {% comment %} {% if form.errors %}
-                        <div class="alert alert-danger alert-dismissible fade show">{{ form.errors }}</div>
-                    {% endif %} {% endcomment %}
-
                     <div class="mb-3">
                         <label for="id_password" class="form-label">Пароль</label>
                         <input type="password" class="form-control" name="password" id="id_password" placeholder="Введите ваш пароль" required>
                     </div>
+
+                    {% if request.GET.next %}
+                        <input type="hidden" name="next", value="{{ request.GET.next }}">
+                    {% endif %}
+
                     <button type="submit" class="btn btn-dark btn-block">Войти</button>
                 </form>
 
