Add cart view and refactor included cart templates

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock  %}
 
 {% block content %}
 <div class="my-5 pt-5 px-2 pb-2 bg-white custom-shadow rounded">
