--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
+{% load carts_tags %}
 
 {% block content %}
+{% user_carts request as carts %}
 <!-- Контент на странице -->
 <div class="row">
     <div class="container mt-5">
@@ -86,6 +88,7 @@
                     <h3 class="text-center mb-4">Корзина</h3>
                     <div class="container" id="cart-items-container">
                         <!-- Разметка корзины -->
+                        {% include "carts/includes/included_cart.html" %}
                         <!-- Закончилась разметка корзины -->
                     </div>
                     <a class="btn btn-dark" href="../orders/create_order.html">
